--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   </div>
 
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>  <!-- jQuery -->
   <script src="game.js" charset="utf-8"></script>
 </body>
 
