--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <h1 id="level-title">Press A Key to Start</h1>
   <div class="container">
-    <div class="row">
+    <div lass="row">
 
       <div type="button" id="green" class="btn green">
 
