updating index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h1 id="level-title">Press A Key to Start</h1>
+  <button class="btnclickme" onClick="playGame()"><h1 id="level-title">Press A Key to Start</h1></button>
   <div class="container">
     <div lass="row">
 
@@ -34,7 +34,17 @@
     </div>
 
   </div>
-
+    <footer>
+  <div class="contact">
+      <a href="mailto:patelbimal5@gmail.com" class="iconfooter" data-bs-toggle="tooltip" data-bs-placement="top" title="patelbimal5@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+      <a href="tel:+16479165145" class="iconfooter" data-bs-toggle="tooltip" data-bs-placement="top" title="Phone#:+1 647-916-5145"><i class="fa-solid fa-phone"></i></a>
+      <a class="href iconfooter" href="https://www.linkedin.com/in/bimal-patel-b794b8153/" target="_blank"><i class="footer-icon fa-brands fa-linkedin"></i></a>
+      <a class="href iconfooter" href="https://github.com/patelbimal5" target="_blank"><i class="footer-icon fa-brands fa-github "></i></a>
+      <!-- <i class="footer-icon fa-solid fa-envelope" data-bs-toggle="tooltip" data-bs-placement="top" title="patelbimal5@gmail.com"></i>
+      <i class="footer-icon fa-solid fa-phone" data-bs-toggle="tooltip" data-bs-placement="top" title="Phone#:+1 647-916-5145"></i>
+      <br> -->
+  </div>
+</footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>  <!-- jQuery -->
   <script src="game.js" charset="utf-8"></script>
 </body>
