--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <button class="btnclickme" onClick="playGame()"><h1 id="level-title">Press A Key to Start</h1></button>
+  <button class="btnclickme" onClick="playGame()"><h1 id="level-title">Press Any Key to Start or Click Me</h1></button>
   <div class="container">
     <div lass="row">
 
